Fix z-index on hero, again

--- a/pfv/static/assets/css/hero.css
+++ b/pfv/static/assets/css/hero.css
@@ -1,6 +1,7 @@
 #hero {
   position: relative;
   margin: 200px auto;
+  z-index: 2;
 }
 
 #hero #hero-title {
